# ices0

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL  NEWS  README.md  config.h.cmake.in  configure.ac  docker_compose.yaml
.github/workflows/: cmake-single-platform.yml
.junie/: guidelines.md
conf/: CMakeLists.txt  ices.conf.dist.in
doc/: CMakeLists.txt
examples/config/: ices.conf
examples/demo/: read.me
examples/flac/: read.me
examples/playlist/: index.py  playlist.txt
src/: CMakeLists.txt  icestypes.h  id3.c  in_flac.c  in_mp4.c  in_vorbis.c  log.c  metadata.c  mp3.c  reencode.c  reencode.h  setup.c  signals.c  stream.c  util.c
src/playlist/: CMakeLists.txt  Makefile.am  pm_builtin.c  pm_perl.c  pm_python.c  pm_script.c  rand.c
